# m1_pmu_test

./: CMakeLists.txt  libtests.cpp  pmu_utils.h  test_br_nottaken.cpp  test_br_taken.cpp  test_br_uncond.cpp  test_lnsn.cpp  test_load.cpp  test_load_fp64.cpp  test_load_pair32.cpp  test_load_pair_fp32.cpp  test_load_pair_fp64.cpp  test_lxsn.cpp  test_store_fp128.cpp  test_store_fp32.cpp  test_store_fp64.cpp  test_store_pair32.cpp  test_store_pair_fp128.cpp
data/: cycle_like.csv  global_non_zero.csv  global_zero.csv  loop_non_zero.csv  loop_zero.csv  test_addx_1-nontrivial_stable.csv  test_addx_1-stable.csv  test_addx_1-summary_slopes.csv  test_addx_1.yml  test_addx_16-nontrivial_stable.csv  test_addx_16-stable.csv  test_addx_16-summary_slopes.csv  test_addx_16.yml  test_addx_16_summary_fit.csv  test_addx_1_summary_fit.csv  test_addx_4-stable.csv  test_addx_4-summary_slopes.csv  test_addx_4.yml  test_addx_4_summary_fit.csv  test_addx_64-nontrivial_stable.csv  test_addx_64-stable.csv  test_addx_64-summary_slopes.csv  test_addx_64.yml  test_addx_64_summary_fit.csv  test_br_call-nontrivial_stable.csv  test_br_call-stable.csv  test_br_call-summary_slopes.csv  test_br_call.yml  test_br_call2-nontrivial_stable.csv  test_br_call2-stable.csv  test_br_call2-summary_single_1.csv  test_br_call2-summary_slopes.csv  test_br_call2.yml  test_br_call2_noret-nontrivial_stable.csv  test_br_call2_noret-stable.csv  test_br_call2_noret-summary_single_1.csv  test_br_call2_noret-summary_slopes.csv  test_br_call2_noret_summary_fit.csv  test_br_call2_ret-diff.csv  test_br_call2_ret-similar.csv  (+2909 more)
data/test_addx_1/: 0.csv  1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  (+182 more)
data/test_addx_16/: 0.csv  1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  (+182 more)
data/test_addx_4/: 0.csv  1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  (+182 more)
data/test_addx_64/: 0.csv  1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  (+182 more)
data/test_br_call/: 0.csv  1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  (+960 more)
data/test_br_call2/: 0.csv  1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  (+960 more)
data/test_br_call2_noret/: 0.csv  1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  (+980 more)
scripts/: compute_diff.jl  find_non-trivial_stable.jl  find_stable.jl  gen_atomic_tests.jl  gen_fuse_tests.jl  gen_int2_tests.jl  gen_int_order_tests.jl  gen_int_tests.jl  gen_test.jl  get_slopes.jl  global_scan.jl  libtests.jl  libtests_atomic.jl  libtests_fuse.jl  libtests_int.jl  libtests_int2.jl  libtests_int3.jl  plot_mem3.jl  plot_mem4_tlb.jl  plot_mem5_tlb.jl  plot_mem5_tlb_order.jl  plot_mem6_tlb.jl  plot_mem6_tlb_order.jl  plot_mem_call_tlb.jl  plot_mem_call_tlb_order.jl  plot_mem_load2.jl  runtest_atomic.jl  runtest_fuse.jl  runtest_int.jl  runtest_int2.jl  runtest_int3.jl  summarize_data.jl  summarize_single.jl  summarize_stable.jl  test_branch.jl  test_branch_target.jl  test_mem3.jl  test_mem3_l2.jl  test_mem4_tlb.jl  test_mem5_tlb.jl  (+6 more)
src/: CMakeLists.txt  libtests.cpp  libtests.h  libtests_atomic.cpp  libtests_atomic.s  libtests_fuse.cpp  libtests_fuse.s  libtests_int.cpp  libtests_int.s  libtests_int2.cpp  libtests_int2.s  libtests_int3.cpp  libtests_int3.s  print_cache.cpp  test_br_call.cpp  test_br_call2.cpp  test_br_call2_noret.cpp  test_br_call_noret.cpp  test_br_indirect.cpp  test_br_indirect_call.cpp  test_lnsx.cpp  test_load_fp128.cpp  test_load_fp32.cpp  test_load_pair.cpp  test_load_pair_fp128.cpp  test_lxsx.cpp  test_store.cpp  test_store_pair.cpp  test_store_pair_fp32.cpp  test_store_pair_fp64.cpp  test_syscall.cpp
(+155492 files in other folders)
